# allstate-weekly-lists

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_weekly.py
config/: employees.yml  export.yml  lookups.yml  sources.yml
src/: __init__.py  assigner.py  employee.py  formatter.py  loaders.py  rules.py  runner.py  writers.py
src/normalizers/: cancellation.py  cross_sell.py  pending_cancel.py  renewal.py
src/postprocess/: __init__.py  cancellation.py  generic.py  renewal.py
